--- a/nvme-rhel-91.adoc
+++ b/nvme-rhel-91.adoc
@@ -395,80 +395,74 @@ nvme connect-all -t tcp -w 192.168.2.9 -a 192.168.2.57 -l 1800
 ----			
 =====
 
-== Validate NVMe-oF
+== Step 6: Validate NVMe-oF
 
-You can use the following procedure to validate NVMe-oF.
+include::_include/nvme/nvme-validate-nvme-of.adoc[]
 
-.Steps
-
-. Verify that in-kernel NVMe multipath is indeed enabled by checking:
+. Verify that the controller state of each path is live and has the correct ANA status:
 +
+[role="tabbed-block"]
+=====
+.NVMe/FC
+--
+[source,cli]
 ----
-cat /sys/module/nvme_core/parameters/multipath
-Y
-----
-
-. Verify that the appropriate NVMe-oF settings (such as, `model` set to `NetApp ONTAP Controller` and load balancing `iopolicy` set to `round-robin`) for the respective ONTAP namespaces properly reflect on the host:
-+
-----
-cat /sys/class/nvme-subsystem/nvme-subsys*/model
-NetApp ONTAP Controller
-NetApp ONTAP Controller
-----
-+
-----
-cat /sys/class/nvme-subsystem/nvme-subsys*/iopolicy
-round-robin
-round-robin
+nvme list-subsys /dev/nvme0n1
 ----
 
-. Verify that the ONTAP namespaces properly reflect on the host. For example:
-+
-----
-nvme list
-Node           SN                    Model                   Namespace
-------------   --------------------- ---------------------------------
-/dev/nvme0n1   81CZ5BQuUNfGAAAAAAAB   NetApp ONTAP Controller   1
-
-Usage                Format         FW Rev
--------------------  -----------    --------
-85.90 GB / 85.90 GB  4 KiB + 0 B    FFFFFFFF
-----
-
-. Verify that the controller state of each path is live and has proper ANA status. For example:
-+
-Example (a):
-+
+.Show example
+[%collapsible]
+====
 [subs=+quotes]
 ----
-nvme list-subsys /dev/nvme0n1
 nvme-subsys10 - NQN=nqn.1992-08.com.netapp:sn.82e7f9edc72311ec8187d039ea14107d:subsystem.rhel_131_QLe2742
 \
- +- nvme2 fc traddr=nn-0x2038d039ea1308e5:pn-0x2039d039ea1308e5,host_traddr=nn-0x20000024ff171d30:pn-0x21000024ff171d30 live non-optimized
- +- nvme3 fc traddr=nn-0x2038d039ea1308e5:pn-0x203cd039ea1308e5,host_traddr=nn-0x20000024ff171d31:pn-0x21000024ff171d31 live optimized
- +- nvme4 fc traddr=nn-0x2038d039ea1308e5:pn-0x203bd039ea1308e5,host_traddr=nn-0x20000024ff171d30:pn-0x21000024ff171d30 live optimized
- +- nvme5 fc traddr=nn-0x2038d039ea1308e5:pn-0x203ad039ea1308e5,host_traddr=nn-0x20000024ff171d31:pn-0x21000024ff171d31 live non-optimized
-
+ +- nvme2 fc traddr=nn-0x2038d039ea1308e5:pn-0x2039d039ea1308e5,host_traddr=nn-0x20000024ff171d30:pn-0x21000024ff171d30 *live non-optimized*
+ +- nvme3 fc traddr=nn-0x2038d039ea1308e5:pn-0x203cd039ea1308e5,host_traddr=nn-0x20000024ff171d31:pn-0x21000024ff171d31 *live optimized*
+ +- nvme4 fc traddr=nn-0x2038d039ea1308e5:pn-0x203bd039ea1308e5,host_traddr=nn-0x20000024ff171d30:pn-0x21000024ff171d30 *live optimized*
+ +- nvme5 fc traddr=nn-0x2038d039ea1308e5:pn-0x203ad039ea1308e5,host_traddr=nn-0x20000024ff171d31:pn-0x21000024ff171d31 *live non-optimized*
 ----
-+
-Example (b):
-+
+====
+--
+.NVMe/TCP
+--
+[source,cli]
 ----
 nvme list-subsys /dev/nvme0n1
-nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:subsystem.rhel_tcp_133
-\
- +- nvme1 tcp traddr=192.168.166.21,trsvcid=4420,host_traddr=192.168.166.5 live non-optimized
- +- nvme2 tcp traddr=192.168.166.20,trsvcid=4420,host_traddr=192.168.166.5 live optimized
- +- nvme3 tcp traddr=192.168.167.21,trsvcid=4420,host_traddr=192.168.167.5 live non-optimized
- +- nvme4 tcp traddr=192.168.167.20,trsvcid=4420,host_traddr=192.168.167.5 live optimized
 ----
 
-. Verify that the NetApp plug-in displays proper values for each ONTAP namespace device. 
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
+----
+nvme-subsys1 - NQN=nqn.1992-08.com.netapp:sn.bf0691a7c74411ec8187d039ea14107d:subsystem.rhel_tcp_133
+\
+ +- nvme1 tcp traddr=192.168.166.21,trsvcid=4420,host_traddr=192.168.166.5 *live non-optimized*
+ +- nvme2 tcp traddr=192.168.166.20,trsvcid=4420,host_traddr=192.168.166.5 *live optimized*
+ +- nvme3 tcp traddr=192.168.167.21,trsvcid=4420,host_traddr=192.168.167.5 *live non-optimized*
+ +- nvme4 tcp traddr=192.168.167.20,trsvcid=4420,host_traddr=192.168.167.5 *live optimized*
+----
+====
+--
+=====
+
+. Verify that the NetApp plug-in displays the correct values for each ONTAP namespace device:
 +
-Example (a):
-+
+[role="tabbed-block"]
+=====
+.Column
+--
+[source,cli]
 ----
 nvme netapp ontapdevices -o column
+----
+
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
+----
 Device       Vserver          Namespace Path
 ---------    -------          --------------------------------------------------
 /dev/nvme0n1 vs_tcp79     /vol/vol1/ns1 
@@ -476,9 +470,21 @@ Device       Vserver          Namespace Path
 NSID  UUID                                   Size
 ----  ------------------------------         ------
 1     79c2c569-b7fa-42d5-b870-d9d6d7e5fa84  21.47GB
+----
+====
+--
+.JSON
+--
+[source,cli]
+----
+nvme netapp ontapdevices -o json
+----
 
-
-nvme netapp ontapdevices -o json 
+.Show example
+[%collapsible]
+====
+[subs=+quotes]
+----
 { 
 
   "ONTAPdevices" : [ 
@@ -498,39 +504,11 @@ nvme netapp ontapdevices -o json
 
 } 
 ----
-+
-Example (b):
-+
-----
-nvme netapp ontapdevices -o column
+====
+--
+=====
 
-Device           Vserver                   Namespace Path                                     
----------------- ------------------------- -----------------------------------
-/dev/nvme1n1     vs_tcp_133                /vol/vol1/ns1        
-
-NSID UUID                                   Size
--------------------------------------------------------
-1    1ef7cb56-bfed-43c1-97c1-ef22eeb92657   21.47GB
-
-# nvme netapp ontapdevices -o json
-{
-  "ONTAPdevices":[
-    {
-      "Device":"/dev/nvme1n1",
-      "Vserver":"vs_tcp_133",
-      "Namespace_Path":"/vol/vol1/ns1",
-      "NSID":1,
-      "UUID":"1ef7cb56-bfed-43c1-97c1-ef22eeb92657",
-      "Size":"21.47GB",
-      "LBA_Data_Size":4096,
-      "Namespace_Size":5242880
-    },
-  ]
-
-}
-----
-
-== Step 4: Review the known issues
+== Step 7: Review the known issues
 
 The NVMe-oF host configuration for RHEL 9.1 with ONTAP has the following known issues:
 
